--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     
     <section>
         <h2>About Me</h2>
-        <p>This is a simple static website to showcase the basics of HTML and CSS.</p>
+        <p>Check postMessage.</p>
+        <a onclick="window.parent.postMessage('Home', 'https://longth-2000.github.io:443')">helllllo</a>
     </section>
     
     <footer>
